--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.12", features = ["json"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.138"
+serde_qs = "0.13.0"
+url = "2.5.4"
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full"] }
