--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12", features = ["json"] }
-chrono = { version = "0.4.39", features = ["serde"] }
+reqwest = { version = "0.12.15", features = ["json"] }
+chrono = { version = "0.4.40", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.138"
-serde_qs = "0.13.0"
+serde_json = "1.0.140"
+serde_qs = "0.14.0"
 url = "2.5.4"
+serde_with = "3.12.0"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
