--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ edition = "2021"
 [lib]
 doctest = false
 
+[features]
+default = ["strum"]
+strum = ["strum_macros"]
+
 [dependencies]
 reqwest = { version = "0.12", features = ["json"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -23,6 +27,7 @@ url = "2.5"
 serde_with = "3.12"
 sha2 = "0.10"
 hmac = { version = "0.12", features = ["std"] }
+strum_macros = { version = ">=0.26,<0.28", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
