--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ doctest = false
 
 [features]
 default = ["strum"]
-strum = ["strum_macros"]
 
 [dependencies]
 reqwest = { version = "0.12", features = ["json"] }
@@ -27,7 +26,7 @@ url = "2.5"
 serde_with = "3.12"
 sha2 = "0.10"
 hmac = { version = "0.12", features = ["std"] }
-strum_macros = { version = ">=0.26,<0.28", optional = true }
+strum = { version = ">=0.26,<0.28", features = ["derive"], optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
