chore: added README and updated Cargo.toml in the new paddle-rust-sdk-types package

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
           toolchain: nightly
           override: true
 
-      - run: cargo publish --token ${CRATES_TOKEN}
+      - run: cargo publish --token ${CRATES_TOKEN} --workspace
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
 
